--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,12 @@ script: >
     -DCMAKE_CXX_FLAGS=$CXXFLAGS $UNICODE_OPTIONS .
     && make && make ARGS=--output-on-failure test
 
+allow_failures:
+  env: >
+       UNICODE_OPTIONS=-DCXXOPTS_USE_UNICODE_HELP=Yes
+       PKG_CONFIG_PATH=/usr/local/opt/icu4c/lib/pkgconfig
+       CXXFLAGS=-Wno-error
+
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install icu4c; fi
