--- a/.travis.yml
+++ b/.travis.yml
@@ -43,9 +43,10 @@ matrix:
             - libc++-dev
           sources: *sources
   allow_failures:
-    env: >
-      UNICODE_OPTIONS=-DCXXOPTS_USE_UNICODE_HELP=Yes
-      PKG_CONFIG_PATH=/usr/local/opt/icu4c/lib/pkgconfig
+    env:
+      - >
+        UNICODE_OPTIONS=-DCXXOPTS_USE_UNICODE_HELP=Yes
+        PKG_CONFIG_PATH=/usr/local/opt/icu4c/lib/pkgconfig
 
 script: >
     cmake -DCXXOPTS_BUILD_TESTS=ON -DCMAKE_CXX_COMPILER=$COMPILER
