--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,15 @@
 # Copyright (c) 2014 Jarryd Beck
-# 
+#
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
 # in the Software without restriction, including without limitation the rights
 # to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 # copies of the Software, and to permit persons to whom the Software is
 # furnished to do so, subject to the following conditions:
-# 
+#
 # The above copyright notice and this permission notice shall be included in
 # all copies or substantial portions of the Software.
-# 
+#
 # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 # FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -18,7 +18,25 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 
-if(CXXOPTS_BUILD_EXAMPLES)
-    add_executable(example example.cpp)
-    target_link_libraries(example cxxopts)
+cmake_minimum_required(VERSION 3.9)
+
+include(CheckCXXCompilerFlag)
+
+# Check for standard to use
+check_cxx_compiler_flag(-std=c++17 HAVE_FLAG_STD_CXX17)
+if (HAVE_FLAG_STD_CXX17)
+  add_compile_options("-std=c++17")
+else()
+  check_cxx_compiler_flag(-std=c++1z HAVE_FLAG_STD_CXX1Z)
+  if (HAVE_FLAG_STD_CXX1Z)
+    add_compile_options("-std=c++1z")
+  else()
+    message("The compiler doesn't support the C++17 (or 1z) standard :(")
+    exit()
+  endif()
 endif()
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+include_directories("${PROJECT_SOURCE_DIR}/include")
+add_executable(example example.cpp)
+#target_link_libraries(example cxxopts)
